--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   introduction_screen: ^2.1.0
+  firebase_auth: ^3.1.0
+  firebase_core: ^1.6.0
+
 
 dev_dependencies:
   flutter_test:
@@ -48,22 +51,28 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     # Asset untuk Welcome Screen
-    - assets\images\logoFisiohome.png
+    - assets/images/logoFisiohome.png
 
     # Asset untuk onBoarding screens
-    - assets\images\Slider1.jpg
-    - assets\images\Slider2.jpg
-    - assets\images\Slider3.jpg
+    - assets/images/Slider1.jpg
+    - assets/images/Slider2.jpg
+    - assets/images/Slider3.jpg
+
+    # Asset Login Page
+    - assets/images/google_logo.jpg
+
+    # Asset Home Page
+    - assets/images/HomePage.jpg
 
     # Asset Icons
-    - assets\icons\IconKonsultasi.png
-    - assets\icons\IconLifestyle.png
-    - assets\icons\IconPaket.png
-    - assets\icons\IconVisit.png
-    - assets\icons\IconRiwayat.png
+    - assets/icons/IconKonsultasi.png
+    - assets/icons/IconLifestyle.png
+    - assets/icons/IconPaket.png
+    - assets/icons/IconVisit.png
+    - assets/icons/IconRiwayat.png
 
     # Asset Article //Temporary
-    - assets\images\Article2.jpg
+    - assets/images/Article2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
