--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   introduction_screen: ^2.1.0
   firebase_auth: ^3.1.0
   firebase_core: ^1.6.0
+  email_validator: ^2.0.1
 
 
 dev_dependencies:
