--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   introduction_screen: ^2.1.0
-  firebase_auth: ^3.1.2
-  firebase_core: ^1.7.0
   email_validator: ^2.0.1
-
+  cloud_firestore: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +74,10 @@ flutter:
     - assets/icons/IconRiwayat.png
 
     # Asset Article //Temporary
-    - assets/images/Article2.jpg
+    - assets/images/Artikel1.jpg
+    - assets/images/Artikel2.jpg
+    - assets/images/Artikel3.jpg
+    - assets/images/Artikel4.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
