--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   introduction_screen: ^2.1.0
   email_validator: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
