--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fisiohome.apps">
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
    <application
         android:label="FisioHome"
         android:icon="@mipmap/ic_launcher">
