--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   introduction_screen: ^2.1.0
   email_validator: ^2.0.1
   intl: ^0.17.0
+  firebase_core: ^1.7.0
+  firebase_auth: ^3.1.3
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
