--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,8 @@ dependencies:
   introduction_screen: ^2.1.0
   email_validator: ^2.0.1
   intl: ^0.17.0
-  firebase_core: ^1.7.0
-  firebase_auth: ^3.1.3
-  provider: ^6.0.1
+  qr_code_scanner: ^0.5.2
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
