--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.17.0
   qr_code_scanner: ^0.5.2
   url_launcher: ^6.0.10
+  readmore: ^2.1.0
 
 dev_dependencies:
   flutter_test:
