Event, Profile and Others Update

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,12 @@ android {
     }
 }
 
+rootProject.ext {
+    set('FlutterFire', [
+            FirebaseSDKVersion: '28.4.1'
+    ])
+}
+
 flutter {
     source '../..'
 }
