--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.14.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   # Firebase
-  firebase_core: ^1.8.0
-  firebase_auth: ^3.1.4
+  firebase_core: ^1.10.5
+  firebase_auth: ^3.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,9 +34,10 @@ dependencies:
   introduction_screen: ^2.1.0
   email_validator: ^2.0.1
   intl: ^0.17.0
-  qr_code_scanner: ^0.5.2
-  url_launcher: ^6.0.10
+  qr_code_scanner: ^0.6.1
+  url_launcher: ^6.0.17
   readmore: ^2.1.0
+  flutter_pw_validator: ^1.3.0
 
 dev_dependencies:
   flutter_test:
